--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form with List and Reset</title>
-    <style>
-        li {
-            list-style: none;
-        }
-    </style>
 </head>
 <body>
 
@@ -34,7 +29,7 @@
             let listItems = '';
 
             for (let i = 0; i < emptyArray.length; i++) {
-                listItems += `<li>${emptyArray[i]}</li>`;
+                listItems += `<h1>${emptyArray[i]}</h1>`;
             }
 
             document.getElementById("itemList").innerHTML = listItems;
